--- a/style.css
+++ b/style.css
@@ -38,3 +38,34 @@
     font-weight: 500;
     margin-left: 25px;
 }
+
+
+.home{
+   display: flex;
+   background: url("image/banner.jpg") no-repeat center;
+   height: 100vh;
+   color:#fff;
+   min-height: 500px;
+   font-family: 'Ubuntu',sans-serif;
+
+}
+.home .max-width{
+    margin:  auto 0 auto 40px;
+}
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 40px;
+    margin: 5px;
+    }
+.home .home-content .text-3 span{
+    color: crimson;
+    font-weight: 500;
+
+    }
