--- a/style.css
+++ b/style.css
@@ -14,9 +14,14 @@
 .navbar{
     position: fixed;
     width: 100%;
-    padding: 15px 0;
-    background-color: crimson;
+    padding: 30px 0;
+    /*background-color: crimson;*/
     font-family: 'Ubuntu',sans-serif;
+    transition: all 0.3s ease;
+}
+.navbar.sticky{
+    padding: 15px 0;
+    background: crimson;
 }
 .navbar .max-width{
     display: flex;
@@ -28,6 +33,13 @@
     font-size: 35px;
     font-weight: 600;
 }
+.navbar .logo a span{
+    color: crimson;
+}
+.navbar.sticky .logo a span{
+    color:#fff;
+    transition: all 0.3s ease;
+}
 .navbar .menu li{
     list-style: none;
     display:inline-block;
@@ -37,8 +49,16 @@
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
+    transition: color 0.3s ease;
 }
+.navbar .menu li a:hover{
+    color:crimson;
 
+}
+.navbar.sticky .menu li a:hover{
+    color:#fff;
+    transition: all 0.3s ease;
+}
 
 .home{
    display: flex;
